tests/snapshots/transactions/create/bad_address.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - transactions
    - create
    - 02ff46d897b529927bd1006cf75fb9e005d4f47181ec37db9dc82548218ff88106
    - 17cBiTcWhung3WDLuc9ja5Y7BMus5Q7CD9wYBxS1r1P
    - "1000000000000000000"
    - "--private-key"
    - 609abeb3455aef1b832da331d168e13dd8f565f6c053e6f00cbd15e50e0d6b76
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Invalid value for: body (Invalid address 17cBiTcWhung3WDLuc9ja5Y7BMus5Q7CD9wYBxS1r1P at index 28: decoding failure)
