tests/snapshots/transactions/create/four_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - transactions
    - create
    - 02ff46d897b529927bd1006cf75fb9e005d4f47181ec37db9dc82548218ff88106
    - 17cBiTcWhung3WDLuc9ja5Y7BMus5Q7CD9wYBxS1r1P2R
    - "1000000000000000000"
    - "--private-key"
    - 609abeb3455aef1b832da331d168e13dd8f565f6c053e6f00cbd15e50e0d6b76
---
success: true
exit_code: 0
----- stdout -----
{
  "fromGroup": 1,
  "toGroup": 3,
  "txId": "ac3acfcb932a7c91b870ee7d8e012f06dd1b1986620fddc5e4d6ff72e3d6d265"
}

----- stderr -----
