tests/snapshots/transactions/create/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - transactions
    - create
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  --private-key <PRIVATE_KEY>
  <PUBLIC_KEY>
  <TO_ADDR>
  <AMOUNT>

Usage: kermit transactions create --private-key <PRIVATE_KEY> <PUBLIC_KEY> <TO_ADDR> <AMOUNT>

For more information, try '--help'.
