tests/snapshots/transactions/create/too_small_value.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - transactions
    - create
    - 02ff46d897b529927bd1006cf75fb9e005d4f47181ec37db9dc82548218ff88106
    - 17cBiTcWhung3WDLuc9ja5Y7BMus5Q7CD9wYBxS1r1P2R
    - "100"
    - "--private-key"
    - 609abeb3455aef1b832da331d168e13dd8f565f6c053e6f00cbd15e50e0d6b76
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Tx output value is too small, avoid spreading dust
