tests/snapshots/transactions/create/two_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - transactions
    - create
    - 02ff46d897b529927bd1006cf75fb9e005d4f47181ec37db9dc82548218ff88106
    - 17cBiTcWhung3WDLuc9ja5Y7BMus5Q7CD9wYBxS1r1P2R
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  --private-key <PRIVATE_KEY>
  <AMOUNT>

Usage: kermit transactions create --private-key <PRIVATE_KEY> <PUBLIC_KEY> <TO_ADDR> <AMOUNT>

For more information, try '--help'.
